--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
             </nav>
         </div>
 
-        <div class="studio-header md-50-p">
+        <div class="studio-header md-hide">
             <div class="projects-line">
             </div>
             <h2 class="header-title">studio</h2>
@@ -363,7 +363,7 @@
             </div>
         </div>
 
-        <section class="staff-header">
+        <section class="staff-header md-hide">
             <h1 class="staff-title">staff.</h1>
             <p class="staff-description">Sit amet laoreet sapien dictum. Sed eget eros augue. Pellentesque tempor mi sit amet nisi tincidunt tincidunt. Fusce malesuada lectus sed mauris pharetra faucibus.</p>
 
@@ -398,7 +398,7 @@
                 </div>
             </div>
 
-            <div class="staff-cv">
+            <div class="staff-cv md-100-p">
                 <img class="cv-image" src="images/mario_foto.png" alt="Philippe">
                 <div class="cv-info">
                     <div class="cv-name">mario bellini</div>
@@ -423,7 +423,7 @@
                 </div>
             </div>
 
-            <div class="staff-cv">
+            <div class="staff-cv md-100-p">
                 <img class="cv-image" src="images/patricia_foto.png" alt="Patricia">
                 <div class="cv-info">
                     <div class="cv-name">patricia urquiola</div>
@@ -449,17 +449,16 @@
             </div>
         </div>
 
-        <div class="news-header md-50-p">
+        <div class="news-header md-hide">
             <div class="projects-line">
             </div>
             <h2 class="header-title">news</h2>
             <nav class="projects-nav">
-                <!-- <a class="project-item" href="javascript:void(0);">all</a> -->
-                <!-- might set navigation -->
+
             </nav>
         </div>
 
-        <div class="news-list md-50-p">
+        <div class="news-list md-100-p">
             <h2 class="news-1-title">Mauris et dui sed justo placerat tristique.</h2>
             <div class="news-1-date">11.07.2014</div>
             <img class="news-1-img" src="images/news_1.png" alt="">
@@ -473,44 +472,46 @@
             <a class="news-2-link" href="javascript:void(0);">read more</a>
         </div>
 
+        <iframe class="map" width="600" height="450" frameborder="0" src="https://www.google.com/maps/embed/v1/view?zoom=17&center=33.7652,-118.1893&key=AIzaSyBU4OSsR7PjSe-fn0LGoSZAQm4loCNPGis" allowfullscreen>
+        </iframe>
+        
+        <footer class="footer">
+            <div class="footer-logo">
+                <img class="logo-img" src="images/logo/logo_DSGN.png" alt="logo">
+                <h1 class="logo-title">Associates studio design</h1>
+                <div class="socials-list">
+                    <a class="social-icon" href="javascript:void(0);">
+                        <img class="bg-img" src="images/icons/facebook_icon.png" alt="facebook icon">
+                    </a>
+                    <a class="social-icon" href="javascript:void(0);">
+                        <img class="bg-img" src="images/icons/twitter_icon.png" alt="twitter icon">
+                    </a>
+                    <a class="social-icon" href="javascript:void(0);">
+                        <img class="bg-img" src="images/icons/linkedin_icon.png" alt="linkedin icon">
+                    </a>
+                    <a class="social-icon" href="javascript:void(0);">
+                        <img class="bg-img" src="images/icons/google_icon.png" alt="google+ icon">
+                    </a>
+                </div>
+            </div>
+            <address class="address">
+                <span class="snippet-text">90802 California</span>
+                <span class="snippet-text">Long beach</span>
+                <span class="snippet-text">PO Box 68789</span>
+                <span class="snippet-text">300 East Ocean</span>
+                <span class="snippet-text">Boulevard</span>
+            </address>
+            <address class="contacts">
+                <span class="snippet-text">+64 9 345 6758</span>
+                <span class="snippet-text">info@dsgn-studio</span>
+            </address>
+            <div class="copyright">
+                <span>&copy; 2014  DSGN. All rights reserved - Designed by theuncreativelab.com</span>
+            </div>
+
+        </footer>
     </main>
 
-    <footer class="footer">
-        <iframe class="map" width="600" height="450" frameborder="0" src="https://www.google.com/maps/embed/v1/view?zoom=17&center=33.7652,-118.1893&key=AIzaSyBU4OSsR7PjSe-fn0LGoSZAQm4loCNPGis" allowfullscreen></iframe>
-        <div class="footer-logo">
-            <img class="logo-img" src="images/logo/logo_DSGN.png" alt="logo">
-            <h1 class="logo-title">Associates studio design</h1>
-            <div class="socials-list">
-                <a class="social-icon" href="javascript:void(0);">
-                    <img class="bg-img" src="images/icons/facebook_icon.png" alt="facebook icon">
-                </a>
-                <a class="social-icon" href="javascript:void(0);">
-                    <img class="bg-img" src="images/icons/twitter_icon.png" alt="twitter icon">
-                </a>
-                <a class="social-icon" href="javascript:void(0);">
-                    <img class="bg-img" src="images/icons/linkedin_icon.png" alt="linkedin icon">
-                </a>
-                <a class="social-icon" href="javascript:void(0);">
-                    <img class="bg-img" src="images/icons/google_icon.png" alt="google+ icon">
-                </a>
-            </div>
-        </div>
-        <address class="address">
-            <span class="snippet-text">90802 California</span>
-            <span class="snippet-text">Long beach</span>
-            <span class="snippet-text">PO Box 68789</span>
-            <span class="snippet-text">300 East Ocean</span>
-            <span class="snippet-text">Boulevard</span>
-        </address>
-        <address class="contacts">
-            <span class="snippet-text">+64 9 345 6758</span>
-            <span class="snippet-text">info@dsgn-studio</span>
-        </address>
-        <div class="copyright">
-            <span>&copy; 2014  DSGN. All rights reserved - Designed by theuncreativelab.com</span>
-        </div>
-
-    </footer>
 
 </body>
 
