added tab adaptivity

--- a/index.html
+++ b/index.html
@@ -316,16 +316,13 @@
             <div class="projects-line">
             </div>
             <h2 class="header-title">studio</h2>
-            <nav class="projects-nav">
-                <!-- <a class="project-item" href="javascript:void(0);">all</a> -->
-                <!-- might set navigation -->
-            </nav>
         </div>
 
         <div class="studio-description md-100-p">
             <div class="content content-studio">
                 <div class="left-content-studio">
                     <div class="header-text">
+                        <h2 class="md-studio-title">studio</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sollicitudin eros sit amet nulla rhoncus dictum.</p>
 
                         <p>Nam rhoncus fringilla dolor vitae vulputate. Nullam quis eros lorem. Integer cursus erat a orci congue feugiat. Cras rhoncus mollis libero, id aliquet purus varius sed.</p>
@@ -363,7 +360,7 @@
             </div>
         </div>
 
-        <section class="staff-header md-hide">
+        <section class="staff-header">
             <h1 class="staff-title">staff.</h1>
             <p class="staff-description">Sit amet laoreet sapien dictum. Sed eget eros augue. Pellentesque tempor mi sit amet nisi tincidunt tincidunt. Fusce malesuada lectus sed mauris pharetra faucibus.</p>
 
@@ -373,76 +370,78 @@
         </section>
 
         <div class="staff md-100-p">
-            <div class="staff-cv">
-                <img class="cv-image" src="images/philip_foto.png" alt="Philippe">
-                <div class="cv-info">
-                    <div class="cv-name">philippe starck</div>
-                    <div class="cv-position">designer</div>
-                    <div class="cv-links">
-                        <a class="profile-link" href="javascript:void(0);">cv</a>
-                        <div class="socials-link">
-                            <a class="link-item" href="javascript:void(0);">
-                                <img src="images/icons/facebook_icon_orange.png" alt="facebook icon">
-                            </a>
-                            <a class="link-item" href="javascript:void(0);">
-                                <img src="images/icons/twitter_icon_orange.png" alt="twitter icon">
-                            </a>
-                            <a class="link-item" href="javascript:void(0);">
-                                <img src="images/icons/linkedin_icon_orange.png" alt="linkedin icon">
-                            </a>
-                            <a class="link-item" href="javascript:void(0);">
-                                <img src="images/icons/google_icon_orange.png" alt="google+ icon">
-                            </a>
+            <div class="content content-staff">
+                <div class="staff-cv">
+                    <img class="cv-image" src="images/philip_foto.png" alt="Philippe">
+                    <div class="cv-info">
+                        <div class="cv-name">philippe starck</div>
+                        <div class="cv-position">designer</div>
+                        <div class="cv-links">
+                            <a class="profile-link" href="javascript:void(0);">cv</a>
+                            <div class="socials-link">
+                                <a class="link-item" href="javascript:void(0);">
+                                    <img src="images/icons/facebook_icon_orange.png" alt="facebook icon">
+                                </a>
+                                <a class="link-item" href="javascript:void(0);">
+                                    <img src="images/icons/twitter_icon_orange.png" alt="twitter icon">
+                                </a>
+                                <a class="link-item" href="javascript:void(0);">
+                                    <img src="images/icons/linkedin_icon_orange.png" alt="linkedin icon">
+                                </a>
+                                <a class="link-item" href="javascript:void(0);">
+                                    <img src="images/icons/google_icon_orange.png" alt="google+ icon">
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="staff-cv md-100-p">
-                <img class="cv-image" src="images/mario_foto.png" alt="Philippe">
-                <div class="cv-info">
-                    <div class="cv-name">mario bellini</div>
-                    <div class="cv-position">designer</div>
-                    <div class="cv-links">
-                        <a class="profile-link" href="javascript:void(0);">cv</a>
-                        <div class="socials-link">
-                            <a class="link-item" href="javascript:void(0);">
-                                <img src="images/icons/facebook_icon_orange.png" alt="facebook icon">
-                            </a>
-                            <a class="link-item" href="javascript:void(0);">
-                                <img src="images/icons/twitter_icon_orange.png" alt="twitter icon">
-                            </a>
-                            <a class="link-item" href="javascript:void(0);">
-                                <img src="images/icons/linkedin_icon_orange.png" alt="linkedin icon">
-                            </a>
-                            <a class="link-item" href="javascript:void(0);">
-                                <img src="images/icons/google_icon_orange.png" alt="google+ icon">
-                            </a>
+                <div class="staff-cv">
+                    <img class="cv-image" src="images/mario_foto.png" alt="Philippe">
+                    <div class="cv-info">
+                        <div class="cv-name">mario bellini</div>
+                        <div class="cv-position">designer</div>
+                        <div class="cv-links">
+                            <a class="profile-link" href="javascript:void(0);">cv</a>
+                            <div class="socials-link">
+                                <a class="link-item" href="javascript:void(0);">
+                                    <img src="images/icons/facebook_icon_orange.png" alt="facebook icon">
+                                </a>
+                                <a class="link-item" href="javascript:void(0);">
+                                    <img src="images/icons/twitter_icon_orange.png" alt="twitter icon">
+                                </a>
+                                <a class="link-item" href="javascript:void(0);">
+                                    <img src="images/icons/linkedin_icon_orange.png" alt="linkedin icon">
+                                </a>
+                                <a class="link-item" href="javascript:void(0);">
+                                    <img src="images/icons/google_icon_orange.png" alt="google+ icon">
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="staff-cv md-100-p">
-                <img class="cv-image" src="images/patricia_foto.png" alt="Patricia">
-                <div class="cv-info">
-                    <div class="cv-name">patricia urquiola</div>
-                    <div class="cv-position">designer</div>
-                    <div class="cv-links">
-                        <a class="profile-link" href="javascript:void(0);">cv</a>
-                        <div class="socials-link">
-                            <a class="link-item" href="javascript:void(0);">
-                                <img src="images/icons/facebook_icon_orange.png" alt="facebook icon">
-                            </a>
-                            <a class="link-item" href="javascript:void(0);">
-                                <img src="images/icons/twitter_icon_orange.png" alt="twitter icon">
-                            </a>
-                            <a class="link-item" href="javascript:void(0);">
-                                <img src="images/icons/linkedin_icon_orange.png" alt="linkedin icon">
-                            </a>
-                            <a class="link-item" href="javascript:void(0);">
-                                <img src="images/icons/google_icon_orange.png" alt="google+ icon">
-                            </a>
+                <div class="staff-cv">
+                    <img class="cv-image" src="images/patricia_foto.png" alt="Patricia">
+                    <div class="cv-info">
+                        <div class="cv-name">patricia urquiola</div>
+                        <div class="cv-position">designer</div>
+                        <div class="cv-links">
+                            <a class="profile-link" href="javascript:void(0);">cv</a>
+                            <div class="socials-link">
+                                <a class="link-item" href="javascript:void(0);">
+                                    <img src="images/icons/facebook_icon_orange.png" alt="facebook icon">
+                                </a>
+                                <a class="link-item" href="javascript:void(0);">
+                                    <img src="images/icons/twitter_icon_orange.png" alt="twitter icon">
+                                </a>
+                                <a class="link-item" href="javascript:void(0);">
+                                    <img src="images/icons/linkedin_icon_orange.png" alt="linkedin icon">
+                                </a>
+                                <a class="link-item" href="javascript:void(0);">
+                                    <img src="images/icons/google_icon_orange.png" alt="google+ icon">
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -453,9 +452,6 @@
             <div class="projects-line">
             </div>
             <h2 class="header-title">news</h2>
-            <nav class="projects-nav">
-
-            </nav>
         </div>
 
         <div class="news-list md-100-p">
@@ -472,7 +468,7 @@
             <a class="news-2-link" href="javascript:void(0);">read more</a>
         </div>
 
-        <iframe class="map" width="600" height="450" frameborder="0" src="https://www.google.com/maps/embed/v1/view?zoom=17&center=33.7652,-118.1893&key=AIzaSyBU4OSsR7PjSe-fn0LGoSZAQm4loCNPGis" allowfullscreen>
+        <iframe class="map" src="https://www.google.com/maps/embed/v1/view?zoom=17&center=33.7652,-118.1893&key=AIzaSyBU4OSsR7PjSe-fn0LGoSZAQm4loCNPGis" allowfullscreen>
         </iframe>
         
         <footer class="footer">
