--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Document</title>
+  <title>DSGN Associated studio design</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed:300,300i,400,400i,700,700i">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/hamburger.css">
