issue #11: maked row higher

--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>DSGN Associated studio design</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed:300,300i,400,400i,700,700i">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/hamburger.css">
