first modile adaptive commit, made main header

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
 
 <body>
     <main class="grid-container">
-        <header class="header md-100-p">
+        <header class="header md-100-p sm-100-p">
             <img class="bg-img" src="images/header_chair.png" alt="chairs">
             <div class="content-header">
                 <img class="logo-img" src="images/logo/logo_DSGN.png" alt="logo">
@@ -50,7 +50,7 @@
         </header>
 
         <nav class="menu md-hide">
-            <div class="strikethrough md-clean"></div>
+            <div class="strikethrough"></div>
             <div class="main-navigation" id="main-navigation">
                 <a class="main-navigation-item" href="javascript:void(0);">Home</a>
                 <a class="main-navigation-item" href="javascript:void(0);">Projects</a>
@@ -76,7 +76,7 @@
             </address>
         </nav>
 
-        <div class="projects-header md-50-p">
+        <div class="projects-header md-50-p sm-100-p">
             <div class="projects-line">
             </div>
             <h2 class="header-title">projects</h2>
@@ -89,7 +89,7 @@
             </nav>
         </div>
 
-        <div class="project-fondue md-50-p">
+        <div class="project-fondue md-50-p sm-100-p">
             <img class="bg-img" src="images/foundue_lamp.png" alt="lamp">
             <div class="content content-fondue">
                 <h2 class="project-title">fondue</h2>
@@ -120,7 +120,7 @@
             </div>
         </div>
 
-        <div class="project-potter md-50-p">
+        <div class="project-potter md-50-p sm-100-p">
             <img class="bg-img" src="images/potter_lamp.png" alt="lamp">
             <div class="content content-potter">
                 <h2 class="project-title">potter</h2>
@@ -140,7 +140,7 @@
             </div>
         </div>
 
-        <div class="project-louis md-50-p">
+        <div class="project-louis md-50-p sm-100-p">
             <img class="bg-img" src="images/louis_chair.png" alt="chair">
             <div class="content content-louis">
                 <h2 class="project-title">louis xx</h2>
@@ -168,7 +168,7 @@
             </div>
         </div>
 
-        <div class="project-p22 md-100-p">
+        <div class="project-p22 md-100-p sm-100-p">
             <img class="bg-img" src="images/p22_chair.png" alt="armchair">
             <div class="content content-p22">
                 <h2 class="project-title">395-396 p22</h2>
@@ -196,7 +196,7 @@
             </div>
         </div>
 
-        <div class="project-fiji md-50-p">
+        <div class="project-fiji md-50-p sm-100-p">
             <img class="bg-img" src="images/fiji_chair.png" alt="armchair">
             <div class="content content-fiji">
                 <h2 class="project-title">fiji</h2>
@@ -221,7 +221,7 @@
             </div>
         </div>
 
-        <div class="project-tabano md-50-p">
+        <div class="project-tabano md-50-p sm-100-p">
             <img class="bg-img" src="images/tabano_chair.png" alt="armchair">
             <div class="content content-tabano">
                 <h2 class="project-title">tabano</h2>
@@ -249,7 +249,7 @@
             </div>
         </div>
 
-        <div class="project-sesann md-100-p">
+        <div class="project-sesann md-100-p sm-100-p">
             <img class="bg-img" src="images/sesann_chair.png" alt="armchair">
             <div class="content content-sesann">
                 <h2 class="project-title">sesann</h2>
@@ -274,7 +274,7 @@
             </div>
         </div> 
 
-        <div class="project-alessi md-50-p">
+        <div class="project-alessi md-50-p sm-100-p">
             <img class="bg-img" src="images/alessi.png" alt="">
             <div class="content content-alessi">
                 <h2 class="project-title">alessi</h2>
@@ -299,7 +299,7 @@
             </div>
         </div> 
 
-        <div class="projects-footer md-50-p">
+        <div class="projects-footer md-50-p sm-100-p">
             <div class="projects-line">
             </div>
             <h2 class="header-title">timeline</h2>
@@ -318,7 +318,7 @@
             <h2 class="header-title">studio</h2>
         </div>
 
-        <div class="studio-description md-100-p">
+        <div class="studio-description md-100-p sm-100-p">
             <div class="content content-studio">
                 <div class="left-content-studio">
                     <div class="header-text">
@@ -369,7 +369,7 @@
             <p class="staff-description">Morbi sagittis diam mauris, in adipiscing nulla convallis ut.</p>
         </div>
 
-        <div class="staff md-100-p">
+        <div class="staff md-100-p sm-100-p">
             <div class="content content-staff">
                 <div class="staff-cv">
                     <img class="cv-image" src="images/philip_foto.png" alt="Philippe">
@@ -454,7 +454,7 @@
             <h2 class="header-title">news</h2>
         </div>
 
-        <div class="news-list md-100-p">
+        <div class="news-list md-100-p sm-100-p">
             <h2 class="news-1-title">Mauris et dui sed justo placerat tristique.</h2>
             <div class="news-1-date">11.07.2014</div>
             <img class="news-1-img" src="images/news_1.png" alt="">
@@ -468,10 +468,10 @@
             <a class="news-2-link" href="javascript:void(0);">read more</a>
         </div>
 
-        <iframe class="map" src="https://www.google.com/maps/embed/v1/view?zoom=17&center=33.7652,-118.1893&key=AIzaSyBU4OSsR7PjSe-fn0LGoSZAQm4loCNPGis" allowfullscreen>
+        <iframe class="map sm-100-p" src="https://www.google.com/maps/embed/v1/view?zoom=17&center=33.7652,-118.1893&key=AIzaSyBU4OSsR7PjSe-fn0LGoSZAQm4loCNPGis" allowfullscreen>
         </iframe>
         
-        <footer class="footer">
+        <footer class="footer sm-100-p">
             <div class="footer-logo">
                 <img class="logo-img" src="images/logo/logo_DSGN.png" alt="logo">
                 <h1 class="logo-title">Associates studio design</h1>
