--- a/app/index.html
+++ b/app/index.html
@@ -318,7 +318,7 @@
             <h2 class="header-title">studio</h2>
         </div>
 
-        <div class="studio-description md-100-p sm-100-p">
+        <div class="studio-description md-100-p">
             <div class="content content-studio">
                 <div class="left-content-studio">
                     <div class="header-text">
@@ -369,7 +369,7 @@
             <p class="staff-description">Morbi sagittis diam mauris, in adipiscing nulla convallis ut.</p>
         </div>
 
-        <div class="staff md-100-p sm-100-p">
+        <div class="staff md-100-p">
             <div class="content content-staff">
                 <div class="staff-cv">
                     <img class="cv-image" src="images/philip_foto.png" alt="Philippe">
@@ -454,7 +454,7 @@
             <h2 class="header-title">news</h2>
         </div>
 
-        <div class="news-list md-100-p sm-100-p">
+        <div class="news-list md-100-p">
             <h2 class="news-1-title">Mauris et dui sed justo placerat tristique.</h2>
             <div class="news-1-date">11.07.2014</div>
             <img class="news-1-img" src="images/news_1.png" alt="">
@@ -471,7 +471,7 @@
         <iframe class="map sm-100-p" src="https://www.google.com/maps/embed/v1/view?zoom=17&center=33.7652,-118.1893&key=AIzaSyBU4OSsR7PjSe-fn0LGoSZAQm4loCNPGis" allowfullscreen>
         </iframe>
         
-        <footer class="footer sm-100-p">
+        <footer class="footer">
             <div class="footer-logo">
                 <img class="logo-img" src="images/logo/logo_DSGN.png" alt="logo">
                 <h1 class="logo-title">Associates studio design</h1>
