issue #16: finished adapted mobile markup issue #5: fixed section 'p-22'

--- a/app/index.html
+++ b/app/index.html
@@ -360,14 +360,14 @@
             </div>
         </div>
 
-        <div class="staff-header">
-            <h1 class="staff-title">staff.</h1>
+        <section class="staff-header md-100-p">
+            <h1 class="staff-title">staff</h1>
             <p class="staff-description">Sit amet laoreet sapien dictum. Sed eget eros augue. Pellentesque tempor mi sit amet nisi tincidunt tincidunt. Fusce malesuada lectus sed mauris pharetra faucibus.</p>
 
             <p class="staff-description">Aenean diam tortor, hendrerit ac pulvinar vel, condimentum ac velit. Phasellus eu odio elit. Aenean volutpat mi quam, ut ornare augue tempus ut.</p>
 
             <p class="staff-description">Morbi sagittis diam mauris, in adipiscing nulla convallis ut.</p>
-        </div>
+        </section>
 
         <div class="staff md-100-p">
             <div class="content content-staff">
@@ -448,13 +448,14 @@
             </div>
         </div>
 
-        <div class="news-header md-hide">
+        <section class="news-header md-hide">
             <div class="projects-line">
             </div>
-            <h2 class="header-title">news</h2>
-        </div>
+            <h1 class="header-title">news</h1>
+        </section>
 
         <div class="news-list md-100-p">
+            <h1 class="md-news-header">news</h1>
             <h2 class="news-1-title">Mauris et dui sed justo placerat tristique.</h2>
             <div class="news-1-date">11.07.2014</div>
             <img class="news-1-img" src="images/news_1.png" alt="">
@@ -468,10 +469,10 @@
             <a class="news-2-link" href="javascript:void(0);">read more</a>
         </div>
 
-        <iframe class="map sm-100-p" src="https://www.google.com/maps/embed/v1/view?zoom=17&center=33.7652,-118.1893&key=AIzaSyBU4OSsR7PjSe-fn0LGoSZAQm4loCNPGis" allowfullscreen>
+        <iframe class="map" src="https://www.google.com/maps/embed/v1/view?zoom=17&center=33.7652,-118.1893&key=AIzaSyBU4OSsR7PjSe-fn0LGoSZAQm4loCNPGis" allowfullscreen>
         </iframe>
         
-        <footer class="footer">
+        <footer class="footer sm-100-p">
             <div class="footer-logo">
                 <img class="logo-img" src="images/logo/logo_DSGN.png" alt="logo">
                 <h1 class="logo-title">Associates studio design</h1>
